src/test/ui/cast_char.stderr
error: only u8 can be casted into char
  --> $DIR/cast_char.rs:14:23
   |
14 |     const XYZ: char = 0x1F888 as char;
   |                       ^^^^^^^^^^^^^^^ help: use a char literal instead: `'/u{1F888}'`
   |
note: lint level defined here
  --> $DIR/cast_char.rs:11:9
   |
11 | #![deny(overflowing_literals)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: only u8 can be casted into char
  --> $DIR/cast_char.rs:16:22
   |
16 |     const XY: char = 129160 as char;
   |                      ^^^^^^^^^^^^^^ help: use a char literal instead: `'/u{1F888}'`

error: aborting due to 2 previous errors

